<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.20">
  <GVL Name="GVL_CloudSample" Id="{0511379a-224f-48eb-b304-4e2f5d6d9d96}">
    <Declaration><![CDATA[VAR_GLOBAL

	(* Variables for Hardware *)
	b_Light_1	AT%Q*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)
	b_Light_2	AT%Q*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)
	b_Light_3	AT%Q*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)
	b_Light_4	AT%Q*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)

	b_Button_1	AT%I*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)
	b_Button_2	AT%I*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)
	b_Button_3	AT%I*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)
	b_Button_4	AT%I*			: BOOL;	(*~ (OPC : 1 : enabled for OPC) *)
	
	us_Poti_1	AT%I*			: INT;	(*~ (OPC : 1 : enabled for OPC) *)
	us_Poti_2 	AT%I*			: INT;	(*~ (OPC : 1 : enabled for OPC) *)
	us_Poti_3	AT%I*			: INT;	(*~ (OPC : 1 : enabled for OPC) *)
	us_Poti_4	AT%I*			: INT;	(*~ (OPC : 1 : enabled for OPC) *)

END_VAR

VAR_GLOBAL CONSTANT
	(*	Variables for Cloud demo *)
	MAX_DATA_ACCURACY			: INT := 4;
END_VAR
]]></Declaration>
    <ObjectProperties />
  </GVL>
</TcPlcObject>